edit the homepage, index.html with content of the page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo">
+            <h1>LOGO</h1>
+        </div>
+        <div class="links">
+            <a href="">One</a>
+            <a href="">Two</a>
+            <a href="">Three</a>
+        </div>
+        <div class="summary">
+            <p>Just trying out Flexbox</p>
+            <p>This is a website i created to try out my flexbox skills.Clap for me if its great</p>
+            <button>clap</button>
+        </div>
+        <img src="" width="200px" height="auto">
+    </div>
+    <div class="content">
+        <p>Some random information</p>
+        <img src="" alt="">
+        <p>some random text under the image</p>
+        <img src="" alt="">
+        <p>Some random text under the image</p>
+        <img src="" alt="">
+        <p>Some random text under the image</p>
+        <img src="" alt="">
+        <p>Some random text under the image</p>
+        <p>This is some feedback from a customer rating and showing how the site is good, or maybe bad if he is not impressed</p>
+        <p>-The Flash</p>
+        <p>Its clap time</p>
+        <p>The time is here for you to congratulate me.Just clap for me if you feel like i have done great on flexbox</p>
+        <button>Clap</button>
+    </div>
+    <div class="footer">
+        <p>Copyrite.The odin Project</p>
+    </div>
 </body>
 </html>
