add the images on the page

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
             <p>This is a website i created to try out my flexbox skills.Clap for me if its great</p>
             <button>clap</button>
         </div>
-        <img src="" width="200px" height="auto">
+        <img src="images/img1.avif" width="" height="">
     </div>
     <div class="content">
         <p>Some random information</p>
-        <img src="" alt="">
+        <img src="images/img2.avif" alt="an image">
         <p>some random text under the image</p>
-        <img src="" alt="">
+        <img src="images/img3.avif" alt="an image">
         <p>Some random text under the image</p>
-        <img src="" alt="">
+        <img src="images/img4.avif" alt="an image">
         <p>Some random text under the image</p>
-        <img src="" alt="">
+        <img src="images/img5.avif" alt="an image">
         <p>Some random text under the image</p>
         <p>This is some feedback from a customer rating and showing how the site is good, or maybe bad if he is not impressed</p>
         <p>-The Flash</p>
