--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
+        <div class="hero">
         <div class="logo">
             <h1>LOGO</h1>
         </div>
@@ -15,6 +17,7 @@
             <a href="">One</a>
             <a href="">Two</a>
             <a href="">Three</a>
+        </div>
         </div>
         <div class="summary">
             <p>Just trying out Flexbox</p>
