add classes to the page so as to style it

--- a/index.html
+++ b/index.html
@@ -19,28 +19,50 @@
             <a href="">Three</a>
         </div>
         </div>
-        <div class="summary">
-            <p>Just trying out Flexbox</p>
+        <div class="villain">
+            <div class="summary">
+            <p class="head">Just trying out Flexbox</p>
             <p>This is a website i created to try out my flexbox skills.Clap for me if its great</p>
-            <button>clap</button>
+            <div class="clap"><button>clap</button></div>
+            </div>
+        <img src="images/img.avif" width="300px" height="150px">
         </div>
-        <img src="images/img1.avif" width="" height="">
     </div>
     <div class="content">
-        <p>Some random information</p>
-        <img src="images/img2.avif" alt="an image">
-        <p>some random text under the image</p>
-        <img src="images/img3.avif" alt="an image">
-        <p>Some random text under the image</p>
-        <img src="images/img4.avif" alt="an image">
-        <p>Some random text under the image</p>
-        <img src="images/img5.avif" alt="an image">
-        <p>Some random text under the image</p>
+        <p class="two">some random infomation</p>
+        <div class="major">        
+        <div class="minor img">
+        <img src="images/img2.avif" alt="an image" width="150px" height="150px">
+        <div class="minortext"><p>some random text under the image</p></div>
+        </div>
+        <div class="minor img">
+        <img src="images/img3.avif" alt="an image" width="150px" height="150px">
+        <div class="minortext"><p>Some random text under the image</p></div>
+        </div>
+        <div class="minor img">
+        <img src="images/img4.avif" alt="an image" width="150px" height="150px">
+        <div class="minortext"><p>Some random text under the image</p></div>
+        </div>
+        <div class="minor img">
+        <img src="images/img5.avif" alt="an image" width="150px" height="150px">
+        <div class="minortext"><p>Some random text under the image</p></div>
+        </div>
+        </div>
+        <div class="major center">
+            <div class="minor">
         <p>This is some feedback from a customer rating and showing how the site is good, or maybe bad if he is not impressed</p>
-        <p>-The Flash</p>
+        <p class="end">-The Flash</p>
+        </div>
+        </div>
+        <div class="major last">
+            <div class="minor">
         <p>Its clap time</p>
         <p>The time is here for you to congratulate me.Just clap for me if you feel like i have done great on flexbox</p>
+        </div>
+        <div class="clap1">
         <button>Clap</button>
+        </div>
+        </div>
     </div>
     <div class="footer">
         <p>Copyrite.The odin Project</p>
